--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "install": "^0.13.0",
+    "lodash.filter": "^4.6.0",
     "npm": "^8.19.2",
     "react": "17.0.2",
     "react-native": "0.67.4",
